# empire_engine

./: .gitignore  CMakeLists.txt  README.md  empire_sandbox.cpp  main.cpp
.github/workflows/: codeql-analysis.yml
engine/: CMakeLists.txt
engine/src/: Empire.h  empire.cpp  empire.h
engine/src/application/: Application.cpp  Application.h
engine/src/component/: ComponentInterface.h  component_interface.h
engine/src/errors/: ErrorStatus.h  error_status.h
engine/src/event/: Event.h  EventDispatcher.h  EventManager.cpp  EventManager.h  KeyEvent.h  KeyPressedEvent.cpp  KeyPressedEvent.h  KeyReleasedEvent.cpp  KeyReleasedEvent.h  MouseButtonEvent.h  MouseButtonPressedEvent.cpp  MouseButtonPressedEvent.h  MouseButtonReleasedEvent.cpp  MouseButtonReleasedEvent.h  MouseButtonScrolledEvent.cpp  MouseButtonScrolledEvent.h  MouseMovedEvent.h  WindowResizeEvent.cpp  WindowResizeEvent.h
engine/src/log/: LogLevel.h  Logger.cpp  Logger.h
engine/src/renderer/: ShaderLoader.cpp  ShaderLoader.h  Vertex.h  VulkanRenderer.cpp  VulkanRenderer.h  shader_loader.cpp  shader_loader.h  vulkan_renderer.cpp  vulkan_renderer.h
engine/src/window/: Window.cpp  Window.h  WindowData.h  window.cpp  window.h
scripts/: compile_shaders.sh
